# MFG2

./: .gitignore  CMakeLists.txt  Convergence_Analisys.xlsx  README.md  consts.cpp  malgo_tests.cpp  mfg_tests.cpp  solver1.cpp  solver2.cpp
inc/: solver1.h  solver2.h  utils.h
tests/: CMakeLists.txt  catch.hpp  malgo_tests.cpp  mfg_tests.cpp
